# Token-Comparison-Tool

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Procfile  README.md  app.json  pyproject.toml  requirements.txt  run.sh
config/: README.md  sf-mcp.json
scenarios/: s01_soql_top_accounts.yaml  s02_unified_profile_lookup.yaml  s03_trade_volume_breakdown.yaml  s04_open_cases_by_priority.yaml  s05_opportunity_pipeline_report.yaml  s06_customer_360_displaytech.yaml
scripts/: capture_screenshots.py
src/token_compare/: analysis.py  api.py  benchmark.py  compare.py  db.py  diff_explainer.py  history.py  inference_client.py  legacy_parser.py  mcp_config.py  mcp_path.py  mcp_proxy.py  messages_runner.py  models.py  native_tools.py  og_render.py  outcomes.py  preflight.py  pricing.py  projection.py  recommendations.py  report.py  report_loader.py  runner.py  scenarios.py  sessions.py  sf_auth.py  (+1 more)
static/: admin.html  app.js  compare.html  compare.js  glossary.html  guide.html  history.html  history.js  index.html  share.html  styles.css
tests/: test_analysis.py  test_api.py  test_benchmark.py  test_compare.py  test_db.py  test_diff_explainer.py  test_e2e.py  test_history.py  test_inference_client.py  test_mcp_config.py  test_mcp_path.py  test_messages_runner.py  test_models.py  test_native_tools.py  test_og_render.py  test_outcomes.py  test_preflight.py  test_pricing.py  test_projection.py  test_recommendations.py  test_report.py  test_report_loader.py  test_runner.py  test_runner_capture.py  test_scenarios.py  test_sessions.py  test_sf_auth.py  test_share_token.py
(+29 files in other folders)
