[project]
name = "token-compare"
version = "0.1.0"
description = "Token Comparison Tool — Salesforce MCP vs Native LLM benchmark"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "pydantic>=2.9",
  "pyyaml>=6.0",
  "httpx>=0.27",
  "python-multipart>=0.0.20",
  "anthropic>=0.40",
  "asyncpg>=0.30",
  "itsdangerous>=2.2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "httpx>=0.27",
  "pytest-postgresql>=6.1",
]

[project.scripts]
token-compare = "token_compare.api:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
